--- a/modules/samples/oauth/oauth10a-resource-owner-equivalent/pom.xml
+++ b/modules/samples/oauth/oauth10a-resource-owner-equivalent/pom.xml
@@ -10,7 +10,7 @@
 	License for the specific language governing permissions and ~ limitations 
 	under the License. -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
@@ -95,12 +95,12 @@
 		<dependency>
 			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.identity.oauth.stub</artifactId>
-			<version>4.2.0</version>
+			<version>${carbon.platform.version}</version>
 		</dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.identity.oauth</artifactId>
-            <version>4.2.0</version>
+            <version>${carbon.platform.version}</version>
         </dependency>
     </dependencies>
 </project>
