--- a/modules/integration/tests/pom.xml
+++ b/modules/integration/tests/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.wso2.identity</groupId>
         <artifactId>identity-integration-tests</artifactId>
-        <version>5.0.0</version>
+        <version>5.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -111,7 +111,7 @@
                                 <artifactItem>
                                     <groupId>org.wso2.identity</groupId>
                                     <artifactId>wso2is</artifactId>
-                                    <version>5.0.0</version>
+                                    <version>${project.version}</version>
                                     <type>zip</type>
                                     <overWrite>true</overWrite>
                                     <outputDirectory>${basedir}/target/tobeCopied/</outputDirectory>
@@ -233,7 +233,7 @@
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>SecVerifier</artifactId>
-            <version>${carbon.version}</version>
+            <version>${carbon.platform.version}</version>
             <type>aar</type>
         </dependency>
         <dependency>
@@ -270,6 +270,6 @@
     </dependencies>
     <properties>
         <test.framework.version>4.2.6</test.framework.version>
-        <is.version>5.0.0</is.version>
+        <is.version>${project.parent.version}</is.version>
         <emma.version>2.1.5320</emma.version>
     </properties></project>
