--- a/pom.xml
+++ b/pom.xml
@@ -476,7 +476,7 @@
 		<axis2.wso2.version>${orbit.version.axis2}</axis2.wso2.version>
 		<axiom.wso2.version>${orbit.version.axiom}</axiom.wso2.version>
 		<carbon.version>${wso2carbon.version}</carbon.version>
-		<carbon.kernel.version>4.2.0</carbon.kernel.version>
+		<carbon.kernel.version>4.3.0-SNAPSHOT</carbon.kernel.version>
 		<carbon.p2.plugin.version>1.5.3</carbon.p2.plugin.version>
 		<orbit.version.axiom>1.2.11.wso2v5-SNAPSHOT</orbit.version.axiom>
 		<orbit.version.axis2>1.6.1.wso2v11-SNAPSHOT</orbit.version.axis2>
@@ -494,6 +494,9 @@
 		<kaptcha.wso2.version>2.3.0.wso2v1</kaptcha.wso2.version>
 		<version.commons.logging>1.1.1</version.commons.logging>
         <emma.version>2.1.5320</emma.version>
+        <wso2carbon.version>4.3.0-SNAPSHOT</wso2carbon.version>
+        <jaggeryjs.version>0.9.0.ALPHA5.wso2v1-SNAPSHOT</jaggeryjs.version>
+        <stratos.version>2.2.0</stratos.version>
 	</properties>
 
     <repositories>
