--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,8 @@
 		<module>modules/distribution</module>
 		<module>modules/styles</module>
 		<module>modules/dashboard</module>
-		<module>modules/integration</module>
+        <!--todo: disabling integration until the migration to the new framework-->
+		<!--<module>modules/integration</module>-->
 <!--		<module>modules/samples</module> -->
 	</modules>
 
