--- a/modules/distribution/conf/log4j.properties
+++ b/modules/distribution/conf/log4j.properties
@@ -85,7 +85,7 @@ log4j.additivity.com.atomikos=false
 log4j.additivity.org.apache=false
 
 # CARBON_CONSOLE is set to be a ConsoleAppender using a PatternLayout.
-#log4j.appender.CARBON_CONSOLE=org.wso2.carbon.logging.appenders.CarbonConsoleAppender
+#log4j.appender.CARBON_CONSOLE=org.wso2.carbon.utils.logging.appenders.CarbonConsoleAppender
 log4j.appender.CARBON_CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CARBON_CONSOLE.layout=org.wso2.carbon.utils.logging.TenantAwarePatternLayout
 # ConversionPattern will be overridden by the configuration setting in the DB
@@ -104,7 +104,7 @@ log4j.appender.CARBON_MEMORY.columnList=%T,%S,%A,%d,%c,%p,%m,%H,%I,%Stacktrace
 log4j.appender.CARBON_MEMORY.threshold=DEBUG
 
 # CARBON_LOGFILE is set to be a DailyRollingFileAppender using a PatternLayout.
-log4j.appender.CARBON_LOGFILE=org.wso2.carbon.logging.appenders.CarbonDailyRollingFileAppender
+log4j.appender.CARBON_LOGFILE=org.wso2.carbon.utils.logging.appenders.CarbonDailyRollingFileAppender
 # Log file will be overridden by the configuration setting in the DB
 # This path should be relative to WSO2 Carbon Home
 log4j.appender.CARBON_LOGFILE.File=${carbon.home}/repository/logs/${instance.log}/wso2carbon${instance.log}.log
