--- a/modules/distribution/conf/log4j.properties
+++ b/modules/distribution/conf/log4j.properties
@@ -94,7 +94,7 @@ log4j.appender.CARBON_CONSOLE.layout.TenantPattern=%U%@%D[%T]
 log4j.appender.CARBON_CONSOLE.threshold=DEBUG
 
 # The memory appender for logging
-log4j.appender.CARBON_MEMORY=org.wso2.carbon.logging.appender.CarbonMemoryAppender
+log4j.appender.CARBON_MEMORY=org.wso2.carbon.logging.service.appender.CarbonMemoryAppender
 log4j.appender.CARBON_MEMORY.bufferSize=2000
 log4j.appender.CARBON_MEMORY.layout=org.wso2.carbon.utils.logging.TenantAwarePatternLayout
 # ConversionPattern will be overridden by the configuration setting in the DB
@@ -123,7 +123,7 @@ log4j.appender.CARBON_SYS_LOG.Facility=USER
 log4j.appender.CARBON_SYS_LOG.threshold=DEBUG
 
 # LOGEVENT is set to be a LogEventAppender using a PatternLayout to send logs to LOGEVENT 
-log4j.appender.LOGEVENT=org.wso2.carbon.logging.appender.LogEventAppender
+log4j.appender.LOGEVENT=org.wso2.carbon.logging.service.appender.LogEventAppender
 log4j.appender.LOGEVENT.url=tcp://localhost:7611
 log4j.appender.LOGEVENT.layout=org.wso2.carbon.utils.logging.TenantAwarePatternLayout
 log4j.appender.LOGEVENT.columnList=%T,%S,%A,%d,%c,%p,%m,%I,%Stacktrace
