adding Integration tests modules and migrated tests

--- a/modules/integration/pom.xml
+++ b/modules/integration/pom.xml
@@ -32,7 +32,9 @@
     <name>Identity Server Integration Tests</name>
     <packaging>pom</packaging>
     <modules>
-        <module>tests</module>
+        <module>tests-common</module>
+        <module>tests-integration</module>
+        <module>tests-ui-integration</module>
     </modules>
     <build>
         <plugins>
