Removing integration tests from build temporily

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<module>modules/styles</module>
 		<module>modules/dashboard</module>
         <!--todo: disabling integration until the migration to the new framework-->
-		<module>modules/integration</module>
+		<!--module>modules/integration</module-->
 <!--		<module>modules/samples</module> -->
 	</modules>
 
